haskell/hmx/test/HMX/files/ill-typed/011_let_lambda_app.lam
let twice = /y. y y in let retone = /q.1 in twice retone twice
